# fileserve

./: Cargo.toml  Makefile
proto/: file_service.proto
python/: client.py  grpc_client.py
python/proto/: file_service_pb2.py  file_service_pb2_grpc.py
src/: finder.rs  lib.rs  main.rs
