[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"


[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "downloader"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.28"
maturin = "1.3.0"
prost = "0.12.1"
prost-build = "0.12.1"
protobuf = "3.2.0"
pyo3 = "0.19.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[dependencies.pyo3-asyncio]
version = "0.19"
features = ["tokio-runtime"]
